force-app/main/default/objects/ProjectTeamMembers__c/ProjectTeamMembers__c.object-meta.xml
<CustomObject>
    <label>Project Team Members</label>
    <nameField>
        <displayFormat>ProjTeam{000000}</displayFormat>
        <label>Project Team Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>