force-app/main/default/objects/ProjectTeamMembers__c/fields/isCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>isCurrentUser__c</fullName>
    <formula>IF(Member__c=$User.Id,1,0)</formula>
    <label>isCurrentUser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>