force-app/main/default/objects/ProjectTeamMembers__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Team Members</relationshipLabel>
    <relationshipName>Project_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>