force-app/main/default/objects/ProjectTeamMembers__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TechLead</fullName>
                <label>Tech Lead</label>
            </value>
            <value>
                <fullName>TechResource</fullName>
                <label>Tech Resource</label>
            </value>
            <value>
                <fullName>CommercialLead</fullName>
                <label>Commercial Lead</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>